Payment Integration-userPayment

--- a/src/App.css
+++ b/src/App.css
@@ -77,18 +77,20 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    height: 100vh;
   }
   
   .modal-content {
-    width: 400px;
-    height: 400px;
+    width: 90%;
+    max-width: 600px;
+    max-height: 90vh; /* Adjusted max-height value for better content visibility */
     background-color: white;
     border-radius: 8px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
     overflow: auto;
     padding: 20px;
   }
-
+  
   .user-info-item {
     margin-bottom: 10px;
   }
@@ -105,11 +107,22 @@
   }
   
   
+
+  @media (max-width: 600px) {
+    .modal-content {
+      padding: 10px;
+    }
+  }
   
   @media (max-width: 480px) {
     .modal-content {
       width: 90%;
       height: 90%;
     }
+    .modal-content {
+        width: 95%;
+        max-width: none;
+        max-height: 95vh; /* Adjust maximum height for smaller screens */
+      }                                                         
   }
   
