--- a/src/App.css
+++ b/src/App.css
@@ -105,8 +105,89 @@
     /* For example: */
     color: #333;
   }
+
+  .refenceID{
+    border: none;
+    height: 40px;
+    width: 400px;
+    padding-left: 20px;
+    border-radius: 5px;
+  }
   
-  
+ .payUserDetails {
+    background: white;
+    border-radius: 5px;
+    padding: 10px;
+    margin-top: 10px;
+  }
+  .payUserDetails-list{
+    border-bottom: 2px solid lightgray;
+    padding-bottom: 10px;
+    display: flex;
+    justify-content: space-between;
+  }
+  .payingDetails{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 10px;
+    border-bottom: 2px solid lightgray;
+  }
+  .payingList{
+    border: none;
+    background: none;
+    text-align: end;
+  }
+  .paymentMethod{
+    margin-top: 30px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+ .paymentMethod select{
+  border: none;
+    border-radius: 5px;
+    width: 150px;
+    padding: 13px;
+    cursor: pointer;
+ }
+ .customAmount{
+  display: flex;
+    justify-content: space-between;
+    align-items: center;
+ }
+ .customAmount input{
+  border: none;
+    border-radius: 5px;
+    width: 150px;
+    padding: 13px;
+    margin-top: 10px;
+    text-align: end;
+ }
+ .total{
+  display: flex;
+    justify-content: space-between;
+    align-items: center;
+ }
+ .total input{
+  border: none;
+    border-radius: 5px;
+    width: 150px;
+    padding: 13px;
+    margin-top: 10px;
+    background-color: lightgray;
+    text-align: end;
+ }
+ .payUserSubmit{
+  width: 100%;
+  margin-top: 60px;
+    border: none;
+    background: purple;
+    height: 40px;
+    border-radius: 5px;
+    color: #ffffff;
+ }
+
 
   @media (max-width: 600px) {
     .modal-content {
